--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,13 +6,16 @@ spring:
     name: ICH-App
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://43.143.162.177:3306/ichapp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/ichapp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
     username: root
     password: weibingrui1808.
+  mvc:
+    static-path-pattern: /**
 
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
+
 
 
