搭建好图床

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     static-path-pattern: /static/**
   web:
     resources:
-      static-locations: /home/ubuntu/img/**
+      static-locations: /home/lighthouse/
 
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
