--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,12 @@ spring:
     url: jdbc:mysql://43.143.162.177:3306/ichapp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
     username: root
     password: weibingrui1808.
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    connect-timeout: 10000
+
   mvc:
     static-path-pattern: /static/**
   web:
@@ -19,6 +25,8 @@ mybatis:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
+
+
 
 tencent:
   sms:
